@@ -23,6 +23,7 @@ Module::Build     = 0.4004
 
 [Prereqs / TestRequires]
 version           = 0.88
+Class::Null       = 0
 Class::Usul       = v0.65.0
 Module::Build     = 0.4004
 Test::Requires    = 0.06
